--- a/styles/notion.css
+++ b/styles/notion.css
@@ -538,6 +538,31 @@
   overflow: unset;
 }
 
+/* 文前目录最大高度，超出就显示滚动条 */
+.notion-table-of-contents {
+  max-height: 50vh;
+  /* max-width: 90vw; */
+  display: flex;
+  flex-flow: row wrap;
+  overflow: auto;
+
+  .notion-table-of-contents-item-body {
+    white-space: normal;
+    line-height: 1.3;
+    border-bottom: 0;
+  }
+}
+
+/* 侧边目录 */
+.notion-aside-table-of-contents {
+  max-width: 280px;
+
+  .notion-table-of-contents-item-body {
+    white-space: normal;
+    line-height: 1.3;
+  }
+}
+
 .notion-block-ab9a258d6cf444f3bb40dc2600feae91 .notion-column {
   padding: 0;
 }
@@ -553,4 +578,12 @@
 .notion-block-ab90d71650ba48688541c1e8d37213f8 .notion-page-link {
   justify-content: center;
   padding: 2em;
+}
+
+/* 正文前的目录只在 窄屏 时出现 */
+/* 这里是 React面试题总结 的文前目录 */
+@media only screen and (min-width: 1300px) {
+  .notion-block-77e6d8dfb73c4df19addbbd9c15e44c6 {
+    display: none;
+  }
 }
