--- a/styles/notion.css
+++ b/styles/notion.css
@@ -315,26 +315,46 @@
   );
 }
 
-.notion-purple_background,
+.notion-purple_background {
+  /* light purple */
+  background-image: linear-gradient(
+    119deg,
+    var(--bg-color),
+    #f0e0ff 10.5%,
+    #e1d5fe 85.29%,
+    var(--bg-color)
+  );
+}
+
 .notion-pink_background {
   /* light pink */
   background-image: linear-gradient(
     119deg,
     var(--bg-color),
-    #f5c4ff 10.5%,
-    #e7a8fc 85.29%,
+    #fee7f5 10.5%,
+    #ffdaf1 85.29%,
     var(--bg-color)
   );
 }
 
-.notion-blue_background,
-.notion-gray_background {
+.notion-blue_background {
   /* light blue */
   background-image: linear-gradient(
     119deg,
     var(--bg-color),
-    #adedfc 10.5%,
-    #adebfd 85.29%,
+    #ddf9ff 10.5%,
+    #c0ecfb 85.29%,
+    var(--bg-color)
+  );
+}
+
+.notion-gray_background {
+  /* light gray */
+  background-image: linear-gradient(
+    119deg,
+    var(--bg-color),
+    #efefef 10.5%,
+    #dddddd 85.29%,
     var(--bg-color)
   );
 }
@@ -344,8 +364,8 @@
   background-image: linear-gradient(
     119deg,
     var(--bg-color),
-    #f5b8d1 10.5%,
-    #f9bcd3 85.29%,
+    #ffebeb 10.5%,
+    #fcc6c6 85.29%,
     var(--bg-color)
   );
 }
@@ -355,8 +375,8 @@
   background-image: linear-gradient(
     119deg,
     var(--bg-color),
-    #f5ddc8 10.5%,
-    #fdd8a1 85.29%,
+    #ffeddd 10.5%,
+    #fbe2b5 85.29%,
     var(--bg-color)
   );
 }
@@ -366,19 +386,19 @@
   background-image: linear-gradient(
     119deg,
     var(--bg-color),
-    #d4eabc 10.5%,
-    #d2eabc 85.29%,
+    #eefcde 10.5%,
+    #d8f6ac 85.29%,
     var(--bg-color)
   );
 }
 
 .notion-brown_background {
-  /* dark blue */
+  /* light brown */
   background-image: linear-gradient(
     119deg,
     var(--bg-color),
-    #96b8ec 10.5%,
-    #a6c3f0 85.29%,
+    #efe2bd 10.5%,
+    #d1b678 85.29%,
     var(--bg-color)
   );
 }
@@ -399,7 +419,17 @@
   );
 }
 
-.dark-mode .notion-purple_background,
+.dark-mode .notion-purple_background {
+  /* dark purple */
+  background-image: linear-gradient(
+    119deg,
+    var(--bg-color),
+    #503a54 10.5%,
+    #62216e 85.29%,
+    var(--bg-color)
+  );
+}
+
 .dark-mode .notion-pink_background {
   /* dark pink */
   background-image: linear-gradient(
@@ -411,9 +441,19 @@
   );
 }
 
-.dark-mode .notion-blue_background,
-.dark-mode .notion-gray_background {
+.dark-mode .notion-blue_background {
   /* dark blue */
+  background-image: linear-gradient(
+    119deg,
+    var(--bg-color),
+    #314c53 10.5%,
+    #1d4f5e 85.29%,
+    var(--bg-color)
+  );
+}
+
+.dark-mode .notion-gray_background {
+  /* dark gray */
   background-image: linear-gradient(
     119deg,
     var(--bg-color),
@@ -446,7 +486,7 @@
 }
 
 .dark-mode .notion-teal_background {
-  /* dark green */
+  /* dark teal */
   background-image: linear-gradient(
     119deg,
     var(--bg-color),
@@ -457,7 +497,7 @@
 }
 
 .dark-mode .notion-brown_background {
-  /* dark blue */
+  /* dark brown */
   background-image: linear-gradient(
     119deg,
     var(--bg-color),
