--- a/styles/notion.css
+++ b/styles/notion.css
@@ -397,7 +397,7 @@
   background-image: linear-gradient(
     119deg,
     var(--bg-color),
-    #efe2bd 10.5%,
+    #d1b67858 10.5%,
     #d1b678 85.29%,
     var(--bg-color)
   );
@@ -413,8 +413,8 @@
   background-image: linear-gradient(
     119deg,
     var(--bg-color),
-    #4d4d42 10.5%,
-    #4f4c25 85.29%,
+    #4e4e4e37 10.5%,
+    #69682f 85.29%,
     var(--bg-color)
   );
 }
@@ -424,8 +424,8 @@
   background-image: linear-gradient(
     119deg,
     var(--bg-color),
-    #503a54 10.5%,
-    #62216e 85.29%,
+    #4b3a54 10.5%,
+    #57216e 85.29%,
     var(--bg-color)
   );
 }
@@ -435,8 +435,8 @@
   background-image: linear-gradient(
     119deg,
     var(--bg-color),
-    #503a54 10.5%,
-    #62216e 85.29%,
+    #543a49 10.5%,
+    #852c66 85.29%,
     var(--bg-color)
   );
 }
@@ -457,8 +457,8 @@
   background-image: linear-gradient(
     119deg,
     var(--bg-color),
-    #314c53 10.5%,
-    #1d4f5e 85.29%,
+    #606162 10.5%,
+    #454545 85.29%,
     var(--bg-color)
   );
 }
@@ -468,8 +468,8 @@
   background-image: linear-gradient(
     119deg,
     var(--bg-color),
-    #564041 10.5%,
-    #691b2d 85.29%,
+    #564040 10.5%,
+    #691b1b 85.29%,
     var(--bg-color)
   );
 }
@@ -480,7 +480,7 @@
     119deg,
     var(--bg-color),
     #4f4134 10.5%,
-    #5c3221 85.29%,
+    #754823 85.29%,
     var(--bg-color)
   );
 }
