add pagesocial component but no using

--- a/components/styles.module.css
+++ b/components/styles.module.css
@@ -145,38 +145,50 @@
 
 .pageActions {
   display: flex;
-  flex-direction: row;
-  justify-content: center;
-  padding: 6px 12px 12px;
+  flex-direction: column;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
 }
 
 .pageActions a {
   cursor: pointer;
-  font-size: 24px;
+  font-size: 21px;
   display: inline-flex;
-  padding: 12px;
-  margin-right: 1vw;
+  margin-top: 5px;
+  padding: 8px;
   border-radius: 50%;
-  background: transparent;
+  background: rgba(246, 227, 232, 0.5);
+  backdrop-filter: saturate(400%) blur(20px);
+  color: rgb(224, 38, 94);
   transition: all 250ms ease-out;
+  /* background: rgba(207, 207, 207, 0.4); */
 }
 
-.pageActions a:last-of-type {
+/* .pageActions a:last-of-type {
   margin-right: 0;
-}
+} */
 
 .pageActions a:hover {
   transition: all 50ms ease-out;
+  background: #fa5581;
+  color: #fdd8e2;
 }
 
-.likeTweet:hover {
-  background: #f6e3e8;
-  color: #e0265e;
+.mask {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+  z-index: 999;
 }
 
-.retweet:hover {
-  color: #19bf64;
-  background: #e5f2e8;
+@media (min-width: 1300px) {
+  .pageActions {
+    display: none;
+  }
 }
 
 @media (max-width: 1360px) {
