--- a/styles/notion.css
+++ b/styles/notion.css
@@ -163,7 +163,7 @@ ul:not(:has(> li)) {
   }
 }
 
-/* only target safari */
+/* only target safari test*/
 @media screen and (-webkit-min-device-pixel-ratio: 0) {
   _::-webkit-full-page-media,
   _:future,
