--- a/styles/notion.css
+++ b/styles/notion.css
@@ -16,12 +16,12 @@
   --notion-header-height: 54px;
 }
 
-/* 序列列表下的代码块不会超出屏幕了 */
+/* 序列列表下的代码块不会超出屏幕了 test*/
 .notion-list {
   max-width: 100%;
 }
 
-/* 保证序列列表下的内容缩进的距离不要太多 */
+/* 保证序列列表下的内容缩进的距离不要太多 aaa*/
 ol:not(:has(> li)),
 ul:not(:has(> li)) {
   padding: 0 !important;
